# task-manager-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django-tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 21f7db92e6e2_create_users_projects_tasks_tables.py
api/: routers.py
app/: deps.py  main.py
app/api/v1/: __init__.py  auth.py  projects.py  tasks.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  project.py  task.py
app/db/: session.py
app/models/: project.py  task.py  user.py
app/schemas/: __init__.py  project.py  task.py  user.py
apps/tasks/: models.py  serializers.py  services.py  task_selectors.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_rename_owner_task_user_remove_task_status_and_more.py  0004_remove_task_completed_task_status_alter_task_user.py
apps/users/: models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
docker/: Dockerfile
tests/: conftest.py  test_api.py  test_auth.py  test_projects.py  test_tasks.py
